# ChangeLog for dev-libs/xapian-bindings
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/ChangeLog,v 1.8 2009/01/21 16:10:32 jer Exp $

*xapian-bindings-1.0.10 (21 Jan 2009)

  21 Jan 2009; Jeroen Roovers <jer@gentoo.org>
  +xapian-bindings-1.0.10.ebuild:
  Version bump.

*xapian-bindings-1.0.6 (05 Apr 2008)

  05 Apr 2008; Hanno Boeck <hanno@gentoo.org> +xapian-bindings-1.0.6.ebuild:
  Version bump.

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

  20 Jun 2007; Christoph Mende <angelos@gentoo.org>
  xapian-bindings-0.9.9.ebuild:
  Added ~amd64 wrt bug 177807

*xapian-bindings-0.9.9 (28 Nov 2006)

  28 Nov 2006; Marien Zwart <marienz@gentoo.org>
  -xapian-bindings-0.9.5.ebuild, -xapian-bindings-0.9.6.ebuild,
  xapian-bindings-0.9.6-r1.ebuild, +xapian-bindings-0.9.9.ebuild:
  Version bump, remove old ebuilds, rename tcltk USE flag to tcl (bug #17808).

*xapian-bindings-0.9.6-r1 (26 Sep 2006)

  26 Sep 2006; Marien Zwart <marienz@gentoo.org>
  +xapian-bindings-0.9.6-r1.ebuild:
  Fix compilation with python 2.5 and migrate to the generation 2 java eclass.

*xapian-bindings-0.9.6 (25 May 2006)

  25 May 2006; Marien Zwart <marienz@gentoo.org>
  +files/xapian-bindings-0.9.6-java-array-delete.patch,
  +files/xapian-bindings-0.9.6-parallel-make.patch,
  +files/xapian-bindings-0.9.6-php-tests.patch,
  +files/xapian-bindings-0.9.6-php-tests-2.patch,
  +xapian-bindings-0.9.6.ebuild:
  Version bump with new ruby bindings. Now also builds the java bindings if
  requested. Ebuild cleanup based on suggestions from Olly Betts
  (<olly@survex.com>).

*xapian-bindings-0.9.5 (05 May 2006)

  05 May 2006; Marien Zwart <marienz@gentoo.org>
  +files/xapian-bindings-0.9.5-skip-csharp-test.patch, +metadata.xml,
  +xapian-bindings-0.9.5.ebuild:
  New package.
