@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/Attic/xapian-bindings-1.0.10.ebuild,v 1.2 2009/05/01 19:34:40 gengor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/Attic/xapian-bindings-1.0.12.ebuild,v 1.1 2009/05/01 19:34:40 gengor Exp $
 
 EAPI=2
 
